upgrade rule manager
