# api/apidocs.swagger.json
@@ -35,10 +35,55 @@
         },
         "parameters": [
           {
-            "name": "id.value",
+            "name": "page_num",
+            "description": "Page number",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "page_size",
+            "description": "Page size",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "order_by",
+            "description": "Order by",
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "is_descending",
+            "description": "Is descending",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "key_words",
+            "description": "Key words",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "search_key",
+            "description": "Search Key",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "id.value",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "ids",
@@ -57,68 +102,18 @@
             "type": "string"
           },
           {
-            "name": "data_type.value",
+            "name": "type.value",
             "in": "query",
             "required": false,
             "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "topic_type.value",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "short_topic.value",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "search_key.value",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "page.limit.value",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "page.offset.value",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "page.sort_key.value",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "page.Reverse.value",
-            "in": "query",
-            "required": false,
-            "type": "boolean"
+            "format": "int64"
           },
           {
             "name": "status.value",
             "in": "query",
             "required": false,
-            "type": "string"
-          },
-          {
-            "name": "user_id",
-            "description": "user_id 作为一个condition，用户不能查看别人的rule.",
-            "in": "query",
-            "required": false,
-            "type": "string"
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -178,7 +173,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "user_id",
@@ -212,7 +208,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "user_id",
@@ -246,7 +243,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "body",
@@ -261,32 +259,7 @@
                 "name": {
                   "type": "string"
                 },
-                "rule_desc": {
-                  "type": "string"
-                },
-                "data_type": {
-                  "type": "integer",
-                  "format": "int64"
-                },
-                "select_text": {
-                  "type": "string"
-                },
-                "select_fields": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/ruleSelectField"
-                  }
-                },
-                "topic_type": {
-                  "type": "string"
-                },
-                "short_topic": {
-                  "type": "string"
-                },
-                "where": {
-                  "type": "string"
-                },
-                "raw": {
+                "desc": {
                   "type": "string"
                 }
               },
@@ -321,7 +294,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "body",
@@ -370,7 +344,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "body",
@@ -383,7 +358,8 @@
                   "$ref": "#/definitions/ruleRuleStatusReqStatusOp"
                 },
                 "status": {
-                  "type": "string"
+                  "type": "integer",
+                  "format": "int64"
                 },
                 "user_id": {
                   "type": "string"
@@ -419,7 +395,8 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uint64"
           },
           {
             "name": "body",
@@ -611,123 +588,38 @@
         }
       }
     },
-    "ruleBool": {
-      "type": "object",
-      "properties": {
-        "value": {
-          "type": "boolean"
-        }
-      }
-    },
-    "ruleConfigStatus": {
-      "type": "object",
-      "properties": {
-        "data_select_flag": {
-          "type": "boolean"
-        },
-        "data_dispatch_flag": {
-          "type": "boolean"
-        },
-        "data_error_flag": {
-          "type": "boolean"
-        }
-      }
-    },
-    "ruleInt32": {
-      "type": "object",
-      "properties": {
-        "value": {
-          "type": "integer",
-          "format": "int32"
-        }
-      }
-    },
-    "rulePager": {
-      "type": "object",
-      "properties": {
-        "limit": {
-          "$ref": "#/definitions/ruleInt32"
-        },
-        "offset": {
-          "$ref": "#/definitions/ruleInt32"
-        },
-        "sort_key": {
-          "$ref": "#/definitions/ruleString"
-        },
-        "Reverse": {
-          "$ref": "#/definitions/ruleBool"
-        }
-      }
-    },
     "ruleRule": {
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
-        },
-        "user_id": {
-          "type": "string"
+          "type": "string",
+          "format": "uint64"
         },
         "name": {
           "type": "string"
         },
-        "rule_desc": {
+        "desc": {
           "type": "string"
         },
-        "data_type": {
+        "type": {
           "type": "integer",
-          "format": "int32"
-        },
-        "select_text": {
-          "type": "string"
-        },
-        "topic_type": {
-          "type": "string"
-        },
-        "short_topic": {
-          "type": "string"
-        },
-        "where": {
-          "type": "string"
+          "format": "int64"
         },
         "status": {
-          "type": "string"
-        },
-        "ruleql": {
-          "type": "string"
-        },
-        "raw": {
-          "type": "string"
-        },
-        "topic": {
-          "type": "string"
-        },
-        "config_status": {
-          "$ref": "#/definitions/ruleConfigStatus"
-        },
-        "select_fields": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/ruleSelectField"
-          },
-          "title": "bytes debug_message = 15;"
-        },
-        "last_error": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
-        },
-        "create_time": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
-        "update_time": {
+        "created_at": {
           "type": "string",
-          "format": "int64"
+          "format": "int64",
+          "description": "创建时间"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "int64",
+          "description": "更新时间"
         }
-      },
-      "title": "rule"
+      }
     },
     "ruleRuleCreateReq": {
       "type": "object",
@@ -738,33 +630,12 @@
         "name": {
           "type": "string"
         },
-        "rule_desc": {
+        "desc": {
           "type": "string"
         },
-        "data_type": {
+        "type": {
           "type": "integer",
-          "format": "int32"
-        },
-        "select_text": {
-          "type": "string"
-        },
-        "select_fields": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/ruleSelectField"
-          }
-        },
-        "topic_type": {
-          "type": "string"
-        },
-        "short_topic": {
-          "type": "string"
-        },
-        "where": {
-          "type": "string"
-        },
-        "raw": {
-          "type": "string"
+          "format": "int64"
         }
       },
       "description": "Rule create."
@@ -773,7 +644,32 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "name": {
           "type": "string"
+        },
+        "desc": {
+          "type": "string"
+        },
+        "type": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "int64",
+          "description": "创建时间"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "int64",
+          "description": "更新时间"
         }
       }
     },
@@ -826,16 +722,50 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "integer",
-          "format": "int32"
+          "type": "string",
+          "format": "uint64",
+          "description": "Total",
+          "required": [
+            "total"
+          ]
         },
-        "rules": {
+        "page_num": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Page number",
+          "required": [
+            "page_num"
+          ]
+        },
+        "last_page": {
+          "type": "string",
+          "format": "uint64",
+          "description": "Last page",
+          "required": [
+            "last_page"
+          ]
+        },
+        "page_size": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Page size",
+          "required": [
+            "page_size"
+          ]
+        },
+        "data": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/ruleRule"
           }
         }
-      }
+      },
+      "required": [
+        "total",
+        "page_num",
+        "last_page",
+        "page_size"
+      ]
     },
     "ruleRuleStartReqStatusOp": {
       "type": "string",
@@ -849,10 +779,12 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "format": "uint64"
         },
         "status": {
-          "type": "string"
+          "type": "integer",
+          "format": "int64"
         }
       }
     },
@@ -868,10 +800,12 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "format": "uint64"
         },
         "status": {
-          "type": "string"
+          "type": "integer",
+          "format": "int64"
         }
       }
     },
@@ -887,10 +821,12 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "format": "uint64"
         },
         "status": {
-          "type": "string"
+          "type": "integer",
+          "format": "int64"
         }
       }
     },
@@ -898,55 +834,32 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
-        },
-        "user_id": {
-          "type": "string"
+          "type": "string",
+          "format": "uint64"
         },
         "name": {
           "type": "string"
         },
-        "rule_desc": {
-          "type": "string"
-        },
-        "data_type": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "select_text": {
-          "type": "string"
-        },
-        "select_fields": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/ruleSelectField"
-          }
-        },
-        "topic_type": {
-          "type": "string"
-        },
-        "short_topic": {
-          "type": "string"
-        },
-        "where": {
-          "type": "string"
-        },
-        "raw": {
-          "type": "string"
-        }
-      }
-    },
-    "ruleSelectField": {
-      "type": "object",
-      "properties": {
-        "expr": {
+        "desc": {
           "type": "string"
         },
         "type": {
-          "type": "string"
+          "type": "integer",
+          "format": "int64"
         },
-        "alias": {
-          "type": "string"
+        "status": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "created_at": {
+          "type": "string",
+          "format": "int64",
+          "description": "创建时间"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "int64",
+          "description": "更新时间"
         }
       }
     },
@@ -955,6 +868,24 @@
       "properties": {
         "value": {
           "type": "string"
+        }
+      }
+    },
+    "ruleUint32": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "ruleUint64": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "string",
+          "format": "uint64"
         }
       }
     }
